去掉请求路径中的wx路径

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -6,8 +6,8 @@ server:
         min-spare-threads: 30
     port: ${SERVER_PORT:8088}
     connection-timeout: 5000ms
-    servlet:
-        context-path: /wx
+#    servlet:
+#        context-path: /wx
 
 debug: false
 
